media/hydra2/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hydra2
  namespace: media
spec:
  serviceName: hydra2
  replicas: 1
  selector:
    matchLabels:
      app: hydra2
  template:
    metadata:
      labels:
        app: hydra2
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"

      volumes:
        - name: hydra2-config
          persistentVolumeClaim:
            claimName: hydra2-iscsi-pvc
      containers:
        - name: hydra2
          # IMAGE=ghcr.io/linuxserver/nzbhydra2; skopeo --override-os linux list-tags "docker://${IMAGE}" | jq -r '.Tags[]' | sort -V | tail -n1
          image: ghcr.io/linuxserver/nzbhydra2:version-v7.15.3
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              # cpu: "500m"
              memory: "1Gi"

          volumeMounts:
            - name: hydra2-config
              subPath: config
              mountPath: /config

          ports:
            - containerPort: 5076
              name: http

          livenessProbe:
            httpGet:
              port: http
              path: /internalapi/control/ping
            periodSeconds: 10
            failureThreshold: 3

          startupProbe:
            httpGet:
              port: http
              path: /internalapi/control/ping
            periodSeconds: 10
            failureThreshold: 30
