media/hydra2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra2
  namespace: media
spec:
  selector:
    app: hydra2
  ports:
  - name: http
    port: 80
    targetPort: http
