media/hydra2/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hydra2-tailscale
  namespace: media
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  tls:
  - hosts:
    - billowy-voice
  defaultBackend:
    service:
      name: hydra2
      port:
        name: http
  ingressClassName: tailscale
