media/hydra2/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hydra2
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
    external-dns.alpha.kubernetes.io/target: "lga1.desertbluffs.com"
spec:
  tls:
    - hosts:
        - i.desertbluffs.com
  rules:
    - host: i.desertbluffs.com
      http:
        paths:
          - path: /
            backend:
              serviceName: hydra2
              servicePort: hydra2
