media/hydra2/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: hydra2
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: hydra2
  ingress:
  - ports:
    - port: 5076
    from: []
